log
Thu 25 Apr 2024 03:00:23 AM UTC: 
 hashmap.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:48: error: expected ‘)’ before ‘{’ token
   50 |     if (is_equal(map->buckets[index]->key, key) {
      |        ~                                       ^~
      |                                                )
hashmap.c:58:3: error: expected expression before ‘}’ token
   58 |   }
      |   ^
hashmap.c:59:36: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   59 |   map->buckets[index] = createPair(_strdup(key), value);
      |                                    ^~~~~~~
      |                                    strdup
hashmap.c:59:36: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   59 |   map->buckets[index] = createPair(_strdup(key), value);
      |                                    ^~~~~~~~~~~~
      |                                    |
      |                                    int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
hashmap.c: In function ‘createMap’:
hashmap.c:76:53: error: expected ‘)’ before ‘;’ token
   76 |   HashMap * map = (HashMap  *)malloc(sizeof(HashMap) ;
      |                                     ~               ^~
      |                                                     )
hashmap.c:92:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   92 | }
      | ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:76:13: error: unused variable ‘map’ [-Werror=unused-variable]
   76 |   HashMap * map = (HashMap  *)malloc(sizeof(HashMap) ;
      |             ^~~
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c025c78
Thu 25 Apr 2024 03:06:43 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:8: error: expected ‘(’ before ‘is_equal’
   50 |     if is_equal(map->buckets[index]->key, key) {
      |        ^~~~~~~~
      |        (
Compilation failed
7529a20
Thu 25 Apr 2024 03:07:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:28: error: ‘Pair’ has no member named ‘next’
   54 |     if (map->buckets[index]->next == NULL) {
      |                            ^~
Compilation failed
4ae40af
Thu 25 Apr 2024 03:20:14 AM UTC: 
 hashmap.c | 35 -----------------------------------
 1 file changed, 35 deletions(-)
 tests:  0|6
total_score: 0/70
f09b3cd
Thu 25 Apr 2024 03:24:31 AM UTC: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:27: error: expected ‘;’ before ‘map’
   63 |   map->capacity = capacity
      |                           ^
      |                           ;
   64 |   map->size = 0;
      |   ~~~                      
hashmap.c:67:27: error: too many arguments to function ‘malloc’
   67 |   map->buckets = (Pair **)malloc(capacity, sizeof(Pair *));
      |                           ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
3a3a7d3
Thu 25 Apr 2024 03:25:14 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f2d42d8
Thu 25 Apr 2024 03:30:12 AM UTC: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:37: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   51 |       map->buckets[position]->key = _strdup(key) ;
      |                                     ^~~~~~~
      |                                     strdup
hashmap.c:51:35: error: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   51 |       map->buckets[position]->key = _strdup(key) ;
      |                                   ^
hashmap.c:61:39: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   61 |   map->buckets[position] = createPair(_strdup(key), value) ;
      |                                       ^~~~~~~~~~~~
      |                                       |
      |                                       int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:51:37: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
   51 |       map->buckets[position]->key = _strdup(key) ;
      |                                     ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7ed4225
Thu 25 Apr 2024 03:32:31 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
877a3ba
Thu 25 Apr 2024 03:35:57 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|3
total_score: 40/70
62e962c
Thu 25 Apr 2024 03:42:47 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
f1128ed
Thu 25 Apr 2024 03:48:33 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  12|2
total_score: 50/70
71f13b7
